# remo-api

./: .gitignore  Cargo.toml  README.md
data/: appliances.json  devices.json
examples/: parse_appliances.rs  parse_devices.rs  parse_json_devices.rs
src/: appliances.rs  common_types.rs  config.rs  device.rs  json.rs  lib.rs  node_key.rs  parser_options.rs
