[package]
name = "remo-api"
version = "0.1.0"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2021"
resolver = "2"
license = "MIT"
description = "Unofficial Remo Cloud API parser"
repository = "https://github.com/ciniml/remo-api"
readme = "README.md"

[dependencies]
bbqueue = "0.5.1"
chrono = { version = "0.4.22", default-features = false }
embedded-io = "0.3.0"
heapless = { version = "0.7.16" }
hex = { version = "0.4.3", default-features = false }
nom = { version = "7.1.1", default-features = false }
uuid = { version = "1.2.1", default-features = false }

[features]
default = []
std = ["embedded-io/std"]

[[example]]
name = "parse_json_devices"
required-features = ["std"]

[[example]]
name = "parse_devices"
required-features = ["std"]


[[example]]
name = "parse_appliances"
required-features = ["std"]
