[package]
name = "fuga-remo-api"
version = "0.1.1"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2021"
resolver = "2"
license = "MIT"
description = "Unofficial Remo Cloud API parser"
repository = "https://github.com/ciniml/remo-api"
readme = "README.md"
categories = ["parser-implementations", "no-std"]
keywords = ["json", "no-std"]

[dependencies]
bbqueue = "0.5.1"
chrono = { version = "0.4.22", default-features = false }
embedded-io = "0.3.0"
fuga-json-seq-parser = "0.2.0"
heapless = { version = "0.7.16" }
hex = { version = "0.4.3", default-features = false }
nom = { version = "7.1.1", default-features = false }
uuid = { version = "1.2.1", default-features = false }

[features]
default = []
std = ["embedded-io/std", "fuga-json-seq-parser/std"]

[[example]]
name = "parse_json_devices"
required-features = ["std"]

[[example]]
name = "parse_devices"
required-features = ["std"]


[[example]]
name = "parse_appliances"
required-features = ["std"]
